0.3.3
Speeded up replace all.
Status bar in gtk3 version now smaller.
Tweaked installed styles to show 'whitespace' better.
Added 'Show Whitespace' to prefs and view menu.
Added 'Show Whitspace' option.
VTE dev files failure in configure now gives more details.

0.3.2
Back history now shows line:tabname - truncated line ( length of line is same as func def length ), in menu.
Added 'Online Help' option.
Added Back/Forward menus to toolbar buttons.
New icons for gtk3 version ( thanks to David Reimer for that ).
Supplied plugins are now also side-by-side installable for both versions.
More sensible default prefs.
File/folders renamed to make gtk3 version completly installable side-by-side with gtk2 version.
Added --enable-plugins to configure.
Added extra instructions to INSTALL for building with plugins.
Code clean to remove compile warnings for packagers.
Max forward/back history can now be set from prefs.
History now works much more like a browser and makes sense!
Increased Forward/Back history.
Fixed bug when removing certain tool items in prefs dialog.
'Back and 'Forward' now remember last 10 jumps.
Added 'Forward' to navigation menu and as extra button to toolbar.
Plugins are now whitelisted instead of blacklisted so new plugs have to be enabled from the plugin prefs.
Included plugins now built and installed globally with main package.
Added SessionManager plugin to main build/install.
Added FileBrowser plugin to main build/install.
Added ClipboardPlugin plugin to main build/install.
Added TerminalPane plugin to main build/install.
Added Auto search option to prefs, set to on ( defaults to off ) to automatically search function defs/gtk docs/qt5 docs/google when clicking "Definition" from toolbar.
Tweaked toolbar icons.
Selecting a tab from the menu now centres the current line.
Underscores in function/bookmark menu now shown properly.
Scroll current line on screen works better.
Adjusing tabs size now doesn't reguire restart.